--- a/container-builds/resume-jherron/Dockerfile
+++ b/container-builds/resume-jherron/Dockerfile
@@ -3,9 +3,9 @@ RUN pacman -Sy hugo --noconfirm
 RUN useradd -m hugo && \
     mkdir /srv/blog && \
     chgrp -R 0 /srv/blog && \
-    chmod -R g=u /srv/blog
+    chmod -R g=u /srv/blog && \
+    chown hugo -R /srv/blog
 COPY blog/ /srv/blog
-RUN chown hugo -R /srv/blog
 USER hugo
 WORKDIR /srv/blog
 ENTRYPOINT ["/bin/sh", "-c","hugo server --bind 0.0.0.0 --baseURL http://$HOSTNAME -e Production"]
