--- a/container-builds/resume-jherron/blog/config.yml
+++ b/container-builds/resume-jherron/blog/config.yml
@@ -98,7 +98,7 @@ params:
       useLess: false
     details:
       name: "Justin Herron"
-      profession: "Cloud Architect"
+      profession: "Doing fun stuff"
       location: "Tampa, FL"
       email: "jherron@net-dev.net"
       homelink: "https://jherron.ontampa.dev"
