more structure updates

--- a/container-builds/resume-jherron/blog/Makefile
+++ b/container-builds/resume-jherron/blog/Makefile
@@ -1,5 +1,5 @@
 CONF=--config ./config.yaml
-MFLAGS=-M --noBuildLock --gc --noTimes --noChmod --printMemoryUsage --templateMetrics --logLevel info -l ./themes/terminalcv/layouts 
+MFLAGS=-M --noBuildLock --gc --noTimes --noChmod --printMemoryUsage --templateMetrics --logLevel debug -l ./themes/terminalcv/layouts 
 ENV=-e Valhalla
 
 
