much cleaner way to run and build

--- a/container-builds/resume-jherron/Dockerfile
+++ b/container-builds/resume-jherron/Dockerfile
@@ -1,5 +1,5 @@
 FROM quay.io/lib/archlinux
-RUN pacman -Sy hugo --noconfirm
+RUN pacman -Sy hugo make --noconfirm
 RUN useradd -m hugo && \
     mkdir /srv/blog && \
     chgrp -R 0 /srv/blog && \
@@ -8,4 +8,4 @@ RUN useradd -m hugo && \
 COPY blog/ /srv/blog
 USER hugo
 WORKDIR /srv/blog
-ENTRYPOINT ["/bin/sh", "-c","hugo server --bind 0.0.0.0 --baseURL http://$HOSTNAME -e Production"]
+ENTRYPOINT ["/bin/sh", "-c","make server"]
