apply fix for 404 page

--- a/container-builds/resume-jherron/blog/config/valhalla/config.yml
+++ b/container-builds/resume-jherron/blog/config/valhalla/config.yml
@@ -1,6 +1,11 @@
 theme: "terminalcv"
 title: "Blog for Justin Herron"
-
+server: 
+  redirects:  
+  - force: false  
+    from: "/**"  
+    status: 404  
+    to: /404.html 
 params:
   version: "v1.7-8"
   blog: true
