--- a/ansible/roles/baseos/tasks/main.yml
+++ b/ansible/roles/baseos/tasks/main.yml
@@ -2,12 +2,11 @@
 - name: Gathering facts
   ansible.builtin.gather_facts:
 
-- name: Including all
+- name: Including Red Hat
   ansible.builtin.include_tasks: all.yml
-  tags: [baseos_ssh_keys, baseos_packages]
   when:
-    - ansible_os_family == "RedHat"
     - inventory_hostname not in groups['network']
+    - ansible_os_family == "RedHat"
 
 - name: Include fedora
   ansible.builtin.include_tasks: fedora.yml
