--- a/container-builds/ansible-navigator/configs/ansible.cfg
+++ b/container-builds/ansible-navigator/configs/ansible.cfg
@@ -2,7 +2,7 @@
 inventory               = hosts
 remote_user             = root
 gathering               = explicit
-roles_path              = $DEFAULT_ROLES_PATH:./roles
+roles_path              = /etc/ansible/roles
 vault_password_file     = $ANSIBLE_VAULT_PASSWORD_FILE
 host_key_checking       = False
 display_skipped_hosts   = False
@@ -16,12 +16,6 @@ forks                   = 20
 network_group_modules   = ['sonic', 'netconf', 'dellos9', 'dellos10']
 callbacks_enabled       = timer, profile_tasks, profile_roles
 
-[inventory]
-
-[privilege_escalation]
-
-[paramiko_connection]
-
 [ssh_connection]
 pipelining = True
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s
@@ -30,8 +24,3 @@ ssh_args = -o ControlMaster=auto -o ControlPersist=60s
 command_timeout = 180
 connect_timeout = 100
 connect_retry_timeout = 100
-
-[accelerate]
-[selinux]
-[colors]
-[diff]
