--- a/container-builds/ansible-navigator/context/Containerfile
+++ b/container-builds/ansible-navigator/context/Containerfile
@@ -1,9 +1,10 @@
 ARG EE_BASE_IMAGE="quay.io/centos/centos:stream9"
-ARG PYCMD="/usr/bin/python3"
+ARG PYCMD="/usr/bin/python3.12"
+ARG PYPKG="python312"
 ARG PKGMGR_PRESERVE_CACHE=""
 ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS=""
 ARG ANSIBLE_GALAXY_CLI_ROLE_OPTS=""
-ARG ANSIBLE_INSTALL_REFS="ansible-core ansible-runner"
+ARG ANSIBLE_INSTALL_REFS="ansible-core>=2.16.13 ansible-runner"
 ARG PKGMGR="/usr/bin/dnf"
 
 # Base build stage
@@ -12,6 +13,7 @@ USER root
 ENV PIP_BREAK_SYSTEM_PACKAGES=1
 ARG EE_BASE_IMAGE
 ARG PYCMD
+ARG PYPKG
 ARG PKGMGR_PRESERVE_CACHE
 ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS
 ARG ANSIBLE_GALAXY_CLI_ROLE_OPTS
@@ -20,8 +22,9 @@ ARG PKGMGR
 
 COPY _build/scripts/ /output/scripts/
 COPY _build/scripts/entrypoint /opt/builder/bin/entrypoint
-RUN $PKGMGR install -y python3-pip python3-devel sshpass 
-RUN pip install --upgrade pip setuptools
+RUN $PKGMGR install -y python3.12 python3.12-pip python3.12-devel sshpass 
+RUN python3.12 -m pip install --upgrade pip setuptools
+RUN $PKGMGR install $PYPKG -y ; if [ -z $PKGMGR_PRESERVE_CACHE ]; then $PKGMGR clean all; fi
 RUN /output/scripts/pip_install $PYCMD
 RUN $PYCMD -m pip install --no-cache-dir $ANSIBLE_INSTALL_REFS
 
@@ -29,14 +32,15 @@ RUN $PYCMD -m pip install --no-cache-dir $ANSIBLE_INSTALL_REFS
 FROM base as galaxy
 ARG EE_BASE_IMAGE
 ARG PYCMD
+ARG PYPKG
 ARG PKGMGR_PRESERVE_CACHE
 ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS
 ARG ANSIBLE_GALAXY_CLI_ROLE_OPTS
 ARG ANSIBLE_INSTALL_REFS
 ARG PKGMGR
 
-RUN $PKGMGR makecache 
-RUN $PKGMGR install -y ansible-core
+COPY _build/configs/pip.conf    /etc/
+COPY _build/configs/ansible.cfg /etc/ansible/
 RUN /output/scripts/check_galaxy
 COPY _build /build
 WORKDIR /build
@@ -51,6 +55,7 @@ ENV PIP_BREAK_SYSTEM_PACKAGES=1
 WORKDIR /build
 ARG EE_BASE_IMAGE
 ARG PYCMD
+ARG PYPKG
 ARG PKGMGR_PRESERVE_CACHE
 ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS
 ARG ANSIBLE_GALAXY_CLI_ROLE_OPTS
@@ -70,6 +75,7 @@ FROM base as final
 ENV PIP_BREAK_SYSTEM_PACKAGES=1
 ARG EE_BASE_IMAGE
 ARG PYCMD
+ARG PYPKG
 ARG PKGMGR_PRESERVE_CACHE
 ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS
 ARG ANSIBLE_GALAXY_CLI_ROLE_OPTS
