sync current progress

--- a/container-builds/ansible-navigator/Makefile
+++ b/container-builds/ansible-navigator/Makefile
@@ -1,10 +1,11 @@
 TAG=latest
 IMAGE=quay.io/jherron/ee-centos
-
 define CLEAN_UP
   @rm -rf context ansible-navigator.log
-  @podman rmi -i quay.io/jherron/ee-centos:$(TAG) 
+  @podman rmi -f -i quay.io/jherron/ee-centos:$(TAG) 
 endef
+
+default: build
 
 clean:
 	$(call CLEAN_UP)
@@ -14,6 +15,7 @@ build:
 		--extra-build-cli-args="--sign-by jherron@net-dev.net" \
 		--squash all \
 		--no-cache \
+		-vvv \
 		--prune-images \
 		-t $(IMAGE):$(TAG)
 push:
