--- a/ansible/roles/baseos/tasks/main.yml
+++ b/ansible/roles/baseos/tasks/main.yml
@@ -1,7 +1,14 @@
 ---
-- name: Including all
+- name: Gathering facts
+  ansible.builtin.gather_facts:
+
+- name: Including Red Hat
   ansible.builtin.include_tasks: all.yml
-  tags: [baseos_ssh_keys, baseos_packages]
   when:
-    - ansible_os_family == "RedHat"
     - inventory_hostname not in groups['network']
+    - ansible_os_family == "RedHat"
+
+- name: Include fedora
+  ansible.builtin.include_tasks: fedora.yml
+  when: 
+    - ansible_distribution == "Fedora"
