--- a/container-builds/ansible-navigator/configs/beaker_client/config
+++ b/container-builds/ansible-navigator/configs/beaker_client/config
@@ -1,3 +1,12 @@
+# See https://beaker-project.org/docs/user-guide/bkr-client.html 
+# for more info
 HUB_URL=""
+# AUTH_METHOD can either be krbv or simple 
 AUTH_METHOD = ""
-KRB_REALM = ""
+
+# If AUTH_METHOD="krbv" then define KRB_REALM
+# KRB_REALM = "REALM.EXAMPLE.COM"
+# else set AUTH_METHOD="password"
+# USERNAME = "username"
+# PASSWORD = "password"
+
