--- a/container-builds/ansible-navigator/execution-environment.yml
+++ b/container-builds/ansible-navigator/execution-environment.yml
@@ -3,19 +3,26 @@ version: 3
 images:
   base_image:
     name: quay.io/centos/centos:stream9
+options:
+  workdir: /runner
+  user: runner
 dependencies:
   system:
     - python3.12 [platform:rpm]
     - python3.12-pip [platform:rpm]
     - python3.12-devel [platform:rpm]
     - sshpass [platform:rpm]
+    - beaker-client [platform:rpm]
+    - krb5-workstation [platform:rpm]
   python:
+    - ansible-lint
     - pip>=25.3
     - pyghmi
     - wheel
     - kubernetes
     - setuptools
     - urllib3>=2.5.0
+    - jmespath 
   ansible_core:
     package_pip: ansible-core>=2.16.13
   ansible_runner:
@@ -42,6 +49,3 @@ additional_build_steps:
     COPY --chown=runner:runner _build/configs/ansible.cfg        /runner/.ansible.cfg
     COPY --chown=runner:runner _build/configs/beaker_client      /runner/.beaker_client
     COPY --chown=runner:runner _build/configs/ssh                /runner/.ssh
-options:
-  workdir: /runner
-  user: runner
