--- a/galaxy/desyncit/beaker/galaxy.yml
+++ b/galaxy/desyncit/beaker/galaxy.yml
@@ -3,11 +3,15 @@ namespace: desyncit
 name: beaker
 version: 1.0.0
 readme: README.md
+repository: "https://github.com/desyncit/lab/tree/main/galaxy/desyncit/beaker"
 authors:
     - "Justin Herron <jherron@net-dev.net>"
 description: >-
-  Collection for beaker related stuff
-  Upstream url https://beaker-project.org
+  See upstream url https://beaker-project.org for more information.
+  But collection is used in my lab to automate depeployment of 
+  rpm based operating systems.
+
+  Currently still a work in progress.
 license:
     - "CC-BY-4.0"
 dependencies:
@@ -15,4 +19,3 @@ dependencies:
 tags:
     - collection
     - infrastructure
-repository: "https://github.com/desyncit/lab/galaxy/desyncit/beaker/roles/beaker"
